# MosqSoftwareRenderer

./: .gitignore  README.en.md  README.md
MosqSoftwareRenderer/: CMakeLists.txt
MosqSoftwareRenderer/src/: main.cpp
MosqSoftwareRenderer/src/core/base/: effect.h  singleton.h  tool.cpp  tool.h  vertex.cpp  vertex.h
MosqSoftwareRenderer/src/core/glm/detail/: type_mat4x4.inl
MosqSoftwareRenderer/src/core/renderer/: camera.cpp  camera.h  edge.cpp  edge.h  gradients.cpp  gradients.h  mosq.cpp  mosq.h  renderTarget.cpp  renderTarget.h  timer.cpp  timer.h
MosqSoftwareRenderer/src/effect/: cube.cpp  cube.h  start.cpp  start.h  triangle.cpp  triangle.h
MosqSoftwareRenderer/src/public/: public.cpp  public.h
MosqSoftwareRenderer/src/test/: test.cpp  test.h
